--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -16,7 +16,7 @@
   <!-- Image + summary -->
   <div class="row align-items-start mb-5">
     <div class="col-12 col-md-6">
-      <img src="{% static 'images/blogging.jpg' %}"
+      <img src="{% static 'images/content/blogging.jpg' %}"
            alt="Image illustrating blogging"
            class="img-fluid w-100 object-fit-cover"
            style="max-height: 300px;">
