--- a/templates/reeds/reed_detail.html
+++ b/templates/reeds/reed_detail.html
@@ -16,7 +16,7 @@
   <!-- Photo + Comment side by side -->
   <div class="row align-items-start mb-5">
     <div class="col-12 col-md-6">
-      <img src="{% static 'images/reedcase_1280.jpg' %}"
+      <img src="{% static 'images/content/reed.jpg' %}"
            alt="Image illustrating a reed"
            class="img-fluid w-100 object-fit-cover"
            style="max-height: 300px;">
