--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -32,7 +32,7 @@
         {% if post.image %}
           <img src="{{ post.image.url }}" class="card-img-top" alt="Post image">
         {% else %}
-          <img src="{% static 'images/blogging.jpg' %}" class="card-img-top" alt="Default image">
+          <img src="{% static 'images/content/blogging.jpg' %}" class="card-img-top" alt="Default image">
         {% endif %}
     
         <div class="card-body d-flex flex-column">
