Added a component _object_form.hmtl

--- a/templates/reeds/reed_list.html
+++ b/templates/reeds/reed_list.html
@@ -2,14 +2,14 @@
 {% block title %}All reeds{% endblock %}
 {% load static %}
 
-  <!-- Content starts here -->
+<!-- Content starts here -->
 {% block content %}
 
 <!-- Page title -->
 <section class="container section">
   <div class="row mb-4">
     <div class="col-12 text-center">
-      <h2 class="display-6">Overview of all registered reeds</h2>
+      <h2 class="display-6">All registered reeds</h2>
     </div>
   </div>
 </section>
