--- a/templates/components/_object_form.html
+++ b/templates/components/_object_form.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}{% if form.instance.pk %}Edit{% else %}Create{% endif %} Post{% endblock %}
+{% block title %}{{ title }}{% endblock %}
+
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-8 col-lg-6">
     <div class="card shadow-sm">
       <div class="card-body">
-        <h3 class="card-title mb-4 text-center">{% if form.instance.pk %}Edit{% else %}Create{% endif %} Post</h3>
+        <h3 class="card-title mb-4 text-center">{{ title }}</h3>
         <form method="post">
           {% csrf_token %}
           {{ form|crispy }}
-          <button type="submit" class="btn btn-custom-primary w-100">Save</button>
+          <button type="submit" class="btn btn-custom-primary w-100 mb-3">Save</button>
+          {% if cancel_url %}
+            <a href="{{ cancel_url }}" class="btn btn-custom-secondary w-100">Quit</a>
+          {% endif %}
         </form>
       </div>
     </div>
