--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -10,7 +10,7 @@
 <section class="container section">
   <div class="row mb-4">
     <div class="col-12 text-center">
-      <h2 class="display-6">Overview of all articles</h2>
+      <h2 class="display-6">All posted articles</h2>
     </div>
   </div>
 </section>
