--- a/templates/reeds/reed_detail.html
+++ b/templates/reeds/reed_detail.html
@@ -13,33 +13,35 @@
     </div>
   </div>
 
-  <!-- Photo + Comment side by side -->
+  <!-- Photo + Introduction side by side -->
   <div class="row align-items-start mb-5">
+    <!-- Photo -->
     <div class="col-12 col-md-6">
       <img src="{% static 'images/content/reed.jpg' %}"
            alt="Image illustrating a reed"
            class="img-fluid w-100 object-fit-cover"
            style="max-height: 300px;">
     </div>
+    <!-- Introduction -->
     <div class="col-12 col-md-6">
-      <h4><strong>Comment</strong></h4>
+      <h6><strong>Description</strong></h6>
       <p>{{ reed.item_comment }}</p>
-      <h4><strong>Instrument</strong></h4>
+      <h6><strong>Instrument</strong></h6>
       <p>{{ reed.get_item_type_display }}</p>
-      <h4><strong>Rating</strong></h4>
+      <h6><strong>Rating</strong></h6>
       <p>{{ reed.get_item_rating_display }}</p>
-      <h4><strong>Making</strong></h4>
+      <h6><strong>Making</strong></h6>
       <p>Created at {{ reed.created_on|date:"Y-m-d" }}, by {{ reed.item_creator }} </p>
     </div>
-    <div class="col-12">
-      <!-- Buttons to Edit or Delete a Reed, if the user is the owner -->
+    <!-- Buttons to Edit or Delete a Reed, if the user is the owner -->
+    <div class="col-12 mt-2">
       {% if user == reed.item_creator %}
-      <a href="{% url 'reed_update' reed.pk %}" class="btn btn-primary">Edit</a>
-      <a href="{% url 'reed_delete' reed.pk %}" class="btn btn-danger">Delete</a>
+      <a href="{% url 'reed_update' reed.pk %}" class="btn btn-custom-secondary">Edit</a>
+      <a href="{% url 'reed_delete' reed.pk %}" class="btn btn-custom-primary">Delete</a>
       {% endif %}
-    </div>  
+    </div>   
   </div>
-
+  
   <!-- Cards with categories of information -->
     <!-- Material -->
   <div class="row g-4">
@@ -102,7 +104,7 @@
           </ul>
         </div>
         <div class="card-footer">
-          <!-- Button to open modal -->
+          <!-- Button to open modal to add repertoire -->
           <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#repertoireModal">➕ Add Repertoire</button>
         </div>
       </div>
@@ -125,7 +127,7 @@
           </ul>
         </div>
         <div class="card-footer">
-          <!-- Button to open modal -->
+          <!-- Button to open modal to add an event -->
           <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#eventModal">➕ Add Event</button>
         </div>
       </div>
@@ -140,9 +142,14 @@
     </div>
   </div>
   {% endif %}
-
   <!-- All related comments -->
   {% include 'components/_comments.html' %}
+  <!-- Navigate back to reed list -->
+  <div class="col-12 text-center">
+    <a href="{% url 'reed_list' %}" class="btn btn-custom-secondary">Back to reed list</a>
+  </div>  
+
+
 
 </section>
 
@@ -202,7 +209,7 @@
           <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          {{ form|crispy }}
+          {{ comment_form|crispy }}
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-custom-primary">Post Comment</button>
