--- a/templates/components/_comments.html
+++ b/templates/components/_comments.html
@@ -2,7 +2,7 @@
 <div class="row mt-2 mb-4">
     <div class="col-12 d-flex justify-content-between align-items-center">
       <h4 class="mb-0">Comments</h4>
-      <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#commentModal">➕ Add Comment</button>
+      <a href="{% url 'comments:comment_create' content_type_id object.pk %}" class="btn btn-custom-secondary">Add Comment</a>
     </div>
   </div>
   <ul class="list-group mb-4">
